perf(ops): run the three JVMs on compact object headers (#1921)
## What this is

A JDK 27 evaluation that ended in "no" — and then took the one thing
that made JDK 27 look
attractive, on the LTS the stack already runs.

**JEP 534** (compact object headers become the default in JDK 27) is the
only one of the two JEPs
that carries value here, and it does not need JDK 27: **JEP 519 already
made
`-XX:+UseCompactObjectHeaders` a product option on JDK 25** — no unlock
flag, merely off by default.
So the 96 → 64-bit object layout is enabled now, on all three
application JVMs.

**JEP 523** (G1 becomes the default collector everywhere) changes
nothing here, because

[ADR-0175](https://github.com/krt-profit/basetool/blob/main/docs/adr/0175-jvm-garbage-collectors-are-set-explicitly.md)
already removed the dependency on HotSpot's ergonomics. Checking that
claim against the code is what
found the defect below.

## Changes

### 1. Compact object headers on all three JVMs (ADR-0180, REQ-OPS-030)

`-XX:+UseCompactObjectHeaders` in each service's `JAVA_TOOL_OPTIONS`
**and** on each image's AppCDS
training run. The second half is not a duplicate — it is load-bearing:

- A CDS archive records the object layout it was dumped with, and the
JVM validates it at startup.
- The training run happens during the **image build**, where
`JAVA_TOOL_OPTIONS` does not exist.
- A mismatch is **not** caught by the `ENTRYPOINT`'s `if [ -f
/app/application.jsa ]` fallback,
because the file exists. The JVM prints `does not equal the current
UseCompactObjectHeaders
setting` / `Loading dynamic archive failed` and then **starts normally,
without CDS** — a silent
  loss of the 30–50 % startup saving, with nothing failing anywhere.

Verified rather than assumed, on `eclipse-temurin:25-jdk-alpine` /
`25-jre-alpine`:

| Check | Result |
| --- | --- |
| Temurin 25 ships a compatible base archive | `classes_coh.jsa` sits
beside `classes.jsa` (plus a `nocoops` pair) |
| Real backend jar, training run with the fla